# NF

./: .gitignore  .replit  Cargo.toml  flake.nix  legion_core_rs  memory.jsonl  pyproject.toml  replit.md  requirements.txt
.local/share/.cargo/: .global-cache
attached_assets/: Pasted-TEP-1-UPGRADE-THE-LIBRARIES-requirements-txt-We-need-to_1770095664044.txt  Pasted-TEP-1-UPGRADE-THE-LIBRARIES-requirements-txt-We-need-to_1770095681513.txt  Pasted-We-need-to-forge-three-components-The-Container-genesis_1770096486055.txt
docker/: Dockerfile.heavy  Dockerfile.light
docs/: ARCHITECTURE.md  INTEGRATION_NOTES.md
docs/expansions/: benchmarks.md  checklist.md  containers.md  ontology.md  reflection.md  rust_bridge.md  sovereign_stack.md
docs/expansions/p4/: federation_strategy.md  microservices_blueprint.md  observability_dashboard.md  rust_acceleration_plan.md
docs/geometry/: continuous-geometry.md
docs/mathematics/: continuous-calculus.md  logic-systems.md  pattern-mathematics.md  relations-topology.md
genesis_kernel/: __init__.py  __main__.py  aether.py  app.py  benchmarks.py  bio.py  constants.py  cortex.py  diagnostics.py  infinity_loop.py  love_math.py  memory.py  nervous_system.py  pattern_math.py  quantum.py  rust_bridge.py  spiral_physics.py
genesis_kernel/expansions/: __init__.py  axiom_proof_engine.py  base144k_translator.py  base_144k_solver.py  bio_unification.py  bio_watchdog.py  chaos_testing.py  chrono_compass.py  coherence_expander.py  dodeca_vault.py  glyph_multiplier.py  gorgon_protocol.py  heart_key.py  heartbeat_sync.py  human_anchor.py  ley_line_test.py  living_desktop.py  metatron_compiler.py  mission_simulator.py  mycelial_simulator.py  omega_buffer.py  oubliette_policy.py  phi_time_clock.py  poincare_map.py  pou_api.py  prism_encoder.py  quantum_pattern.py  sonic_scrub.py  sovereign_stack.py  theorem_engine.py  toroidal_field.py  vesica_detector.py  watchdog_policy.py
legion_core_rs/: Cargo.toml
legion_core_rs/src/: lib.rs
scripts/: run_benchmarks.py
src/: lib.rs
tests/: test_diagnostics.py  test_pattern_registry.py  test_rust_bridge.py  test_spiral_physics.py
