[package]
name = "legion_core"
version = "0.1.0"
edition = "2021"

# 🛑 THIS IS THE MISSING KEY 🛑
[lib]
name = "legion_core"
crate-type = ["cdylib"]

[dependencies]
# We need the "extension-module" feature to tell Python how to read this.
pyo3 = { version = "0.23", features = ["extension-module"] }
ndarray = "0.16"